--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+*.Rproj.user
+*.Rhistory
+*.RData
+*.Ruserdata
+*.log
+*.pdf
+*.gz
+*.tex
 .Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-.log
-.pdf
-.gz
-.tex
